# cargo-bundle

./: Cargo.toml
examples/goodbye/: main.rs
src/bundle/: dmg_bundle.rs  mod.rs  osx_bundle.rs  settings.rs
src/bundle/linux/: appimage_bundle.rs
src/bundle/windows/: exe_bundle.rs  group_icon.rs  icon.rs  mod.rs
tests/: common.rs  goodbye.rs  hello.rs
