[package]
name = "cargo-bundle"
version = "0.10.0"
authors = ["George Burton <burtonageo@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bundle", "cargo"]
repository = "https://github.com/burtonageo/cargo-bundle"
description = "Wrap rust executables in OS-specific app bundles"
edition = "2024"
readme = "Readme.md"

[package.metadata.bundle.example.goodbye]
name = "Goodbye"
identifier = "io.github.burtonageo.cargo-bundle.goodbye"
icon = ["examples/goodbye/icon32x32.png", "examples/goodbye/icon128x128.png"]
category = "Developer Tool"
short_description = "An example CLI application showing PNG icon bundling"
long_description = """
A simple command-line application that demonstrates bundling a Rust binary
with PNG icons using cargo-bundle.
"""

[package.metadata.bundle.example.hello]
name = "hello"
identifier = "io.github.burtonageo.cargo-bundle.hello"
icon = ["examples/hello/icon.svg", "examples/hello/icon*.png"]
category = "Utility"
short_description = "An example of a bundled application"
long_description = """
A trivial application that just displays a blank window with
a title bar.  It serves as an example of an application that
can be bundled with cargo-bundle, as well as a test-case for
cargo-bundle's support for bundling crate examples.
"""
[dependencies]
anyhow = "1.0.102"
ar = "0.9.0"
cab = "0.6.0"
cargo_metadata = "0.23.1"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive", "wrap_help", "cargo"] }
dirs = "6.0.0"
glob = "0.3.3"
icns = "0.4.0"
image = { version = "0.25.10", features = ["png"] }
libflate = "2.2.1"
md5 = "0.8.0"
msi = "0.10.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
reqwest = { version = "0.13.2", features = [
    "blocking",
    "native-tls",
], default-features = false }
tempfile = "3.27.0"
resvg = "0.45"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
strsim = "0.11.1"
tar = "0.4.44"
target_build_utils = "0.3.1"
term = "1.2.1"
toml = "0.9.8"
uuid = { version = "1.22.0", features = ["v5"] }
walkdir = "2.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
resvg = "0.45"
winres-edit = "0.2.0"

[dev-dependencies]
winit = "0.30.13"

[[example]]
name = "hello"
path = "examples/hello/main.rs"

[[example]]
name = "goodbye"
path = "examples/goodbye/main.rs"
